--- a/index.html
+++ b/index.html
@@ -17,25 +17,26 @@
         <!--===== HEADER =====-->
         <header class="1-header">
             <nav class="nav bd-grid">
-                <div class="nav_toggle" id="nav_toggle">
+                <div class="nav__toggle" id="nav__toggle">
                     <i class='bx bx-menu'></i>
                 </div>
 
                 <div>
-                    <a href="#" class="nav_logo">Byanka</a>
+                    <a href="#" class="nav__logo">Byanka</a>
                 </div>
 
-                <div class="nav_menu" id="nav-menu">
-                    <div class="nav_close" id="nav-close">
+                <div class="nav__menu" id="nav-menu">
+                    <div class="nav__close" id="nav-close">
                         <i class='bx bx-x'></i>
                     </div>
 
-                    <ul class="nav_list">
-                        <li class="nav_item"><a href="#home" class="nav_link active">Home</a></li>
-                        <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
-                        <li class="nav_item"><a href="#skills" class="nav_link">Skills</a></li>
-                        <li class="nav_item"><a href="#projects" clas="nav_link">Projects</a></li>
-                        <li class="nav_item"><a href="#contact" class="nav_link">Contactme</a></li>
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+                        <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
+                        <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">Contact Me</a></li>
                     </ul>
 
                 </div>
